# crypton

./: .gitignore  README.md
.github/: CODEOWNERS
docs/: ARCHITECTURE.md  BACKGROUND_RESEARCH.md  DEPLOY.md  MATHEMATICAL_FORMULATION.md  README.md  RESEARCH.md  VERIFICATION.md  WHITEPAPER.md
docs/dependencies/: dependencies.md
docs/design_doc/: design_doc.md
docs/research_notes/: ADVERSARIAL.md  ARCHITECTURE.md  BACKGROUND_RESEARCH.md  CRYPTO.md  DEPLOY.md  IMPLEMENTATION.md  NN.md  NOTES.md  (+2 more)
src/: ARCHITECTURE.md  METRICS.md  README.md  SPEC.md  adversarial.py  adversarial_regularization.py  analysis.py  attacks.py  attacks_test.py  certify.py  client.py  client_node.py  crypto_network.py  crypto_test.py  dataset.py  exp-config-run.sh  exp_config.py  experimental_config.sh  federated.py  formal.py  formal_robustness.py  main.py  metrics.py  model.py  nsl_model.sh  parse_args.py  plot.py  prev_client.py  prev_server.py  pyproject.toml  requirements.txt  run_client.py  server.py  settings.py  simulation.py  specification.py  test.py  tests.py  tff_utils.py  trials.sh  (+2 more)
src/adversarial/: README.md  __init__.py  adversarial.py  adversarial_metrics.py  main.py
src/analytics/: README.md  analytics_utils.py
src/client/: README.md
src/crypto/: README.md  __init__.py  crypto_network.py  crypto_test.py  crypto_utils.py  federated.py  main.py  mpc.py  mpc_convert.py  mpc_net.py  mpc_network.py
src/deploy/: README.md  main.py  secure_nn.py  secure_verification.py  specification_auth.py
src/dev/: README.md  nominal_reg.sh  nsl.sh
src/dev/fedavg/: data_corruption.sh  noise_corruption.sh  nominal_reg.sh
src/exp_configs/: README.md
src/exp_configs/fedavg/: blur_corruption.sh  data_corruption.sh  noise_corruption.sh  nsl.sh
src/fedavg/: blur_corruption.sh  data_corruption.sh  noise_corruption.sh  nsl.sh
src/federated/: crypto_network.py  crypto_utils.py  dataset_utils.py  federated.py
src/federated/flower/: client.py  dataset.py  model.py  run.sh  server.py  utils.py
src/federated/flower/src/: client.py  model.py  run-clients.sh  run-server.sh  server.py  utils.py
src/federated/tff/: tff_utils.py
src/metrics/: README.md  client_accuracy.txt  client_losses.txt  eval_results.json  fit_results.json  plot.py  server_metrics.json
src/monitor/: README.md  graph.py  logger.py  monitor.py
src/nn/: README.md  __init__.py  metrics.py  network.py  test.py
src/prediction/: README.md  abstract_network.py  helpers.py  metrics.py  model.py  network.py  network_convert.py  nn.py  train.py  utils.py
src/prediction/utils/: README.md  metrics.py  misc.py  segmentation_metrics.py  utils.py
src/src/: README.md  adv_reg.py  adversarial.py  adversarial_regularization.py  attacks.py  attacks_test.py  client.py  data.py  dataset.py  formal_robustness.py  metrics.py  model.py  parse_args.py  pyproject.toml  server.py  utils.py
src/src/advanced_tensorflow/: adversarial_regularization.py  run.sh  server.py
src/src/at/: client.py  pyproject.toml  server.py
src/src/common/: client.py
src/src/core/: README.md  __init__.py  adversarial.py  arg_parse.py  client.py  dataset.py  metrics.py  server.py  settings.py  test.py
src/src/sim/: dataset.py  simulation.py  test.py
src/src/simulation/: README.md  adv_reg_simulation.py  dataset.py  deprecated_dataset.py  simulation.py
src/verification/: README.md  __init__.py  bound_propagation.py  hyperproperties.py  ibp.py  main.py  reachability.py  reachability_analysis.py  specification.py  src.py  stl.py  symbolic_interval_analysis.py  symbolic_representation.py  verification.py
src/verification/protocol/: reachability_analysis.py  symbolic_interval_analysis.py
tests/: README.md  main.py  model_test.py
(+29 files in other folders)
