[build-system]
requires = [
    "poetry==1.1.6",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "crypton"
version = "0.1.0"
description = "Federated Adversarial Optimization for Deep Convolutional Networks"
authors = ["Feras Baig <ferasbaig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
flwr = "^0.16.0"  # For development: { path = "../../", develop = true }
tensorflow-cpu = "^2.4.1"
neural-structured-learning = "^1.3.1"
art = "^5.2"
cleverhans = "^3.1.0"
keras = "^2.4.3"
tqdm = "^4.61.1"
