[tool.poetry]
name = "crypton"
version = "0.1.0"
description = "Adversarially Robust Federated Optimization with Neural Structured Learning"
authors = ["Feras Baig <ferasbaig@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.4.3"
tensorflow = "^2.5.0"
neural-structured-learning = "^1.3.1"
flwr = "^0.16.0"
numpy= "^1.19.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
